--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="menu-toggle">☰</button>
         <ul>
             <li><button onclick="showCategory('all')">Início</button></li>
+            <li><button onclick="showCategory('shoes')">Calçados</button></li>
             <li><button onclick="showCategory('electronics')">Eletrônicos</button></li>
             <li><button onclick="showCategory('clothing')">Roupas</button></li>
             <li><button onclick="showCategory('home')">Eletrodomésticos</button></li>
@@ -29,6 +30,11 @@
 
         <section id="electronics" style="display: none;">
             <h2>Eletrônicos</h2>
+            <ul class="product-list"></ul>
+        </section>
+
+        <section id="shoes" style="display: none;">
+            <h2>Calçados</h2>
             <ul class="product-list"></ul>
         </section>
 
