--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <ul id="product-list"></ul>
   </main>
 
+  <!-- Footer with visible app version -->
+  <footer>
+    <p>Versão: 0.0.1.b</p>
+  </footer>
+
   <script src="scripts.js"></script>
 </body>
 </html>
