Update Store name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <h1>MA Imports</h1>
+    <h1>M/A Imports</h1>
   </header>
 
   <nav aria-label="Main Navigation">
@@ -27,9 +27,9 @@
     <ul id="nav-menu">
       <li><button data-category="all">Início</button></li>
       <li><button data-category="shoes">Calçados</button></li>
-      <li><button data-category="electronics">Eletrônicos</button></li>
+      <!-- <li><button data-category="electronics">Eletrônicos</button></li>
       <li><button data-category="clothing">Roupas</button></li>
-      <li><button data-category="home">Eletrodomésticos</button></li>
+      <li><button data-category="home">Eletrodomésticos</button></li> -->
     </ul>
   </nav>
 
@@ -42,7 +42,7 @@
 
   <!-- Footer with visible app version -->
   <footer>
-    <p>Versão: 0.0.1.b</p>
+    <p>Versão: 0.0.0</p>
   </footer>
 
   <script src="scripts.js"></script>
