--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <ul id="nav-menu">
       <li><button data-category="all">Início</button></li>
       <li><button data-category="shoes">Calçados</button></li>
-      <!-- <li><button data-category="electronics">Eletrônicos</button></li>
-      <li><button data-category="clothing">Roupas</button></li>
-      <li><button data-category="home">Eletrodomésticos</button></li> -->
+      <li><button data-category="slippers">Chinelos</button></li>
     </ul>
   </nav>
 
@@ -42,7 +40,7 @@
 
   <!-- Footer with visible app version -->
   <footer>
-    <p>Versão: 1.0.0 - 0.27</p>
+    <p>Versão: 1.0.2 - 0.28</p>
   </footer>
 
   <script src="scripts.js"></script>
