--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <title>Catálogo de Produtos</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Google tag (gtag.js) -->
-  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN65CC6C5R"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-FN65CC6C5R');
   </script>
 </head>
 <body>
   <header>
-    <h1>M/A Imports</h1>
+    <div class="header-logo">
+      <img src="images/logo.jpeg" alt="M/A Imports Logo">
+    </div>
   </header>
 
   <nav aria-label="Main Navigation">
@@ -40,7 +40,7 @@
 
   <!-- Footer with visible app version -->
   <footer>
-    <p>Versão: 1.0.2 - 0.28</p>
+    <p>Versão: 1.0.3 - 0.28</p>
   </footer>
 
   <script src="scripts.js"></script>
