Add modal products

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   </header>
 
   <nav aria-label="Main Navigation">
-    <!-- Mobile Menu Toggle Button -->
     <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
     <ul id="nav-menu">
       <li><button data-category="all">Início</button></li>
@@ -32,15 +31,14 @@
   </nav>
 
   <main>
-    <!-- Category heading (updates based on selection) -->
     <h2 id="category-heading">Todos os Produtos</h2>
-    <!-- All products will be rendered inside this container -->
     <ul id="product-list"></ul>
   </main>
 
-  <!-- Footer with visible app version -->
+  <!-- Modal container will be injected by the script -->
+  
   <footer>
-    <p>Versão: 1.0.5 - 0.28</p>
+    <p>Versão: 2.0.0 - 0.28</p>
   </footer>
 
   <script src="scripts.js"></script>
