--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><button data-category="all">Início</button></li>
       <li><button data-category="shoes">Calçados</button></li>
       <li><button data-category="slippers">Chinelos</button></li>
+      <li><button data-category="tshirts">Camisetas</button></li>
     </ul>
   </nav>
 
