Feature/tshirts category (#12)
* Add tshirts category

* Bump version

* Fix snapshot tests

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><button data-category="all">Início</button></li>
       <li><button data-category="shoes">Calçados</button></li>
       <li><button data-category="slippers">Chinelos</button></li>
+      <li><button data-category="tshirts">Camisetas</button></li>
     </ul>
   </nav>
 
@@ -38,7 +39,7 @@
   <!-- Modal container will be injected by the script -->
   
   <footer>
-    <p>Versão: 2.0.0 - 0.28</p>
+    <p>Versão: 2.0.1 - 0.32</p>
   </footer>
 
   <script src="scripts.js"></script>
