--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Navigation -->
   <nav aria-label="Main Navigation">
+    <!-- Mobile toggle button -->
     <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
     <ul id="nav-menu">
       <li class="menu-item">
