--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </li>
       <li>
         <!-- Parent menu with nested submenu items -->
-        <button class="has-submenu" data-category="shoes" aria-expanded="false">Calçados</button>
+        <button class="has-submenu" data-category="shoes-category" aria-expanded="false">Calçados</button>
         <ul class="submenu">
-          <li><button data-category="shoes">Calçados</button></li>
+          <li><button data-category="shoes">Tênis</button></li>
           <li><button data-category="slippers">Chinelos</button></li>
         </ul>
       </li>
