--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo de Produtos</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Google tag (gtag.js) -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN65CC6C5R"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -21,24 +21,41 @@
     </div>
   </header>
 
-  <!-- Horizontal Navbar -->
+  <!-- Navigation -->
   <nav aria-label="Main Navigation">
-    <!-- Mobile toggle button -->
     <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
     <ul id="nav-menu">
-      <li>
+      <li class="menu-item">
         <button data-category="all">Início</button>
       </li>
-      <li>
-        <!-- Parent menu with nested submenu items -->
-        <button class="has-submenu" data-category="shoes-category" aria-expanded="false">Calçados</button>
+      <li class="menu-item has-submenu">
+        <button data-category="fashion" aria-expanded="false">Moda</button>
         <ul class="submenu">
-          <li><button data-category="shoes">Tênis</button></li>
-          <li><button data-category="slippers">Chinelos</button></li>
+          <li class="menu-item has-submenu">
+            <button data-category="man" aria-expanded="false">Masculino</button>
+            <ul class="submenu">
+              <li class="menu-item has-submenu">
+                <button data-category="clothing-man" aria-expanded="false">Roupas</button>
+                <ul class="submenu">
+                  <li class="menu-item">
+                    <button data-category="tshirts">Camisetas</button>
+                  </li>
+                </ul>
+              </li>
+              <li class="menu-item has-submenu">
+                <button data-category="shoes" aria-expanded="false">Calçados</button>
+                <ul class="submenu">
+                  <li class="menu-item">
+                    <button data-category="shoes">Tênis</button>
+                  </li>
+                  <li class="menu-item">
+                    <button data-category="slippers">Chinelos</button>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li>
-        <button data-category="tshirts">Camisetas</button>
       </li>
     </ul>
   </nav>
