Complete menu improvements

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <button data-category="all">Início</button>
       </li>
       <li class="menu-item has-submenu">
-        <button data-category="fashion" aria-expanded="false">Moda</button>
+        <button data-category="fashion-category" aria-expanded="false">Moda</button>
         <ul class="submenu">
           <li class="menu-item has-submenu">
-            <button data-category="man" aria-expanded="false">Masculino</button>
+            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
             <ul class="submenu">
               <li class="menu-item has-submenu">
-                <button data-category="clothing-man" aria-expanded="false">Roupas</button>
+                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                 <ul class="submenu">
                   <li class="menu-item">
-                    <button data-category="tshirts">Camisetas</button>
+                    <button data-category="tshirts-man">Camisetas</button>
                   </li>
                 </ul>
               </li>
               <li class="menu-item has-submenu">
-                <button data-category="shoes" aria-expanded="false">Calçados</button>
+                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                 <ul class="submenu">
                   <li class="menu-item">
-                    <button data-category="shoes">Tênis</button>
+                    <button data-category="shoes-man">Tênis</button>
                   </li>
                   <li class="menu-item">
-                    <button data-category="slippers">Chinelos</button>
+                    <button data-category="slippers-man">Chinelos</button>
                   </li>
                 </ul>
               </li>
@@ -67,7 +67,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.0.3 - 0.0.41</p>
+    <p>Versão: 2.0.4 - 0.0.41</p>
   </footer>
 
   <script src="scripts.js"></script>
