--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo de Produtos</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Google tag (gtag.js) -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN65CC6C5R"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-FN65CC6C5R');
   </script>
@@ -21,13 +21,43 @@
     </div>
   </header>
 
+  <!-- Navigation -->
   <nav aria-label="Main Navigation">
+    <!-- Mobile toggle button -->
     <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
     <ul id="nav-menu">
-      <li><button data-category="all">Início</button></li>
-      <li><button data-category="shoes">Calçados</button></li>
-      <li><button data-category="slippers">Chinelos</button></li>
-      <li><button data-category="tshirts">Camisetas</button></li>
+      <li class="menu-item">
+        <button data-category="all">Início</button>
+      </li>
+      <li class="menu-item has-submenu">
+        <button data-category="fashion-category" aria-expanded="false">Moda</button>
+        <ul class="submenu">
+          <li class="menu-item has-submenu">
+            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
+            <ul class="submenu">
+              <li class="menu-item has-submenu">
+                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
+                <ul class="submenu">
+                  <li class="menu-item">
+                    <button data-category="tshirts-man">Camisetas</button>
+                  </li>
+                </ul>
+              </li>
+              <li class="menu-item has-submenu">
+                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
+                <ul class="submenu">
+                  <li class="menu-item">
+                    <button data-category="shoes-man">Tênis</button>
+                  </li>
+                  <li class="menu-item">
+                    <button data-category="slippers-man">Chinelos</button>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
@@ -36,10 +66,8 @@
     <ul id="product-list"></ul>
   </main>
 
-  <!-- Modal container will be injected by the script -->
-  
   <footer>
-    <p>Versão: 2.0.3 - 0.0.41</p>
+    <p>Versão: 2.0.4 - 0.0.41</p>
   </footer>
 
   <script src="scripts.js"></script>
