Update fitness tshirts

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <ul class="submenu">
                   <li class="menu-item">
                     <button data-category="tshirts-man">Camisetas</button>
+                    <button data-category="tshirts-fitness-man">Camisetas Fitness</button>
                   </li>
                 </ul>
               </li>
@@ -67,7 +68,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.0.6 - 0.0.41</p>
+    <p>Versão: 2.0.6 - 0.0.45</p>
   </footer>
 
   <script src="scripts.js"></script>
