--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
               <li class="menu-item has-submenu">
                 <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                 <ul class="submenu">
-                  <li class="menu-item">
-                    <button data-category="tshirts-man">Camisetas</button>
-                    <button data-category="tshirts-fitness-man">Camisetas Fitness</button>
+                  <li class="menu-item has-submenu">
+                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="tshirts-casual-man">Casuais</button>
+                        <button data-category="tshirts-fitness-man">Fitness</button>
+                      </li>
+                    </ul>
                   </li>
                 </ul>
               </li>
@@ -68,7 +73,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.0.6 - 0.0.45</p>
+    <p>Versão: 2.0.7 - 0.0.45</p>
   </footer>
 
   <script src="scripts.js"></script>
