--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <ul class="submenu">
                       <li class="menu-item">
                         <button data-category="tshirts-casual-man">Casuais</button>
+                        <button data-category="tshirts-polo-man">Polo</button>
                         <button data-category="tshirts-fitness-man">Fitness</button>
                       </li>
                     </ul>
@@ -73,7 +74,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.1.0 - 0.0.65</p>
+    <p>Versão: 2.1.1 - 0.0.69</p>
   </footer>
 
   <script src="scripts.js"></script>
