--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <button data-category="tshirts-casual-man">Casuais</button>
                         <button data-category="tshirts-fitness-man">Fitness</button>
                         <button data-category="tshirts-polo-man">Polo</button>
+                        <button data-category="tshirts-tank-top-man">Regata</button>
                       </li>
                     </ul>
                   </li>
@@ -74,7 +75,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.1.1 - 0.0.69</p>
+    <p>Versão: 2.1.1 - 0.0.74</p>
   </footer>
 
   <script src="scripts.js"></script>
