--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="menu-item has-submenu">
+                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="shorts-sweatshorts-man">Moletom</button>
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li class="menu-item has-submenu">
@@ -75,7 +83,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.1.1 - 0.0.74</p>
+    <p>Versão: 2.1.1 - 0.0.78</p>
   </footer>
 
   <script src="scripts.js"></script>
