Add new shorts subcategory

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                     <ul class="submenu">
                       <li class="menu-item">
+                        <button data-category="shorts-basic-man">Basica</button>
+                      </li>
+                      <li class="menu-item">
                         <button data-category="shorts-sweatshorts-man">Moletom</button>
                       </li>
                     </ul>
@@ -83,7 +86,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.1.1 - 0.0.78</p>
+    <p>Versão: 2.2.0 - 0.0.83</p>
   </footer>
 
   <script src="scripts.js"></script>
