Add short Jeans

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                     <ul class="submenu">
                       <li class="menu-item">
-                        <button data-category="shorts-basic-man">Basica</button>
+                        <button data-category="shorts-basic-man">Básica</button>
+                      </li>
+                      <li class="menu-item">
+                        <button data-category="shorts-jeans-man">Jeans</button>
                       </li>
                       <li class="menu-item">
                         <button data-category="shorts-sweatshorts-man">Moletom</button>
@@ -86,7 +89,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.2.0 - 0.0.83</p>
+    <p>Versão: 2.3.0 - 0.0.91</p>
   </footer>
 
   <script src="scripts.js"></script>
