Add new products

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <ul class="submenu">
                       <li class="menu-item">
                         <button data-category="tshirts-casual-man">Casuais</button>
+                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                         <button data-category="tshirts-fitness-man">Fitness</button>
                         <button data-category="tshirts-polo-man">Polo</button>
                         <button data-category="tshirts-tank-top-man">Regata</button>
@@ -89,7 +90,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.3.0 - 0.0.91</p>
+    <p>Versão: 2.4.0 - 0.0.97</p>
   </footer>
 
   <script src="scripts.js"></script>
