--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
   <!-- Navigation -->
   <nav aria-label="Main Navigation">
-    <!-- Mobile toggle button -->
     <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
     <ul id="nav-menu">
       <li class="menu-item">
@@ -84,6 +83,7 @@
     </ul>
   </nav>
 
+  <!-- Main Content -->
   <main>
     <h2 id="category-heading">Todos os Produtos</h2>
     <ul id="product-list"></ul>
