--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                       <li class="menu-item">
                         <button data-category="shorts-sweatshorts-man">Moletom</button>
                       </li>
+                      <li class="menu-item">
+                        <button data-category="shorts-tactel-man">Tactel</button>
+                      </li>
                     </ul>
                   </li>
                 </ul>
@@ -90,7 +93,7 @@
   </main>
 
   <footer>
-    <p>Versão: 2.4.0 - 0.0.97</p>
+    <p>Versão: 3.0.0 - 0.1.112</p>
   </footer>
 
   <script src="scripts.js"></script>
