--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
                       <li class="menu-item">
                         <button data-category="tshirts-casual-man">Casuais</button>
                         <button data-category="tshirts-dryfit-man">Dry Fit</button>
-                        <button data-category="tshirts-fitness-man">Fitness</button>
                         <button data-category="tshirts-polo-man">Polo</button>
-                        <button data-category="tshirts-tank-top-man">Regata</button>
+                      </li>
+                    </ul>
+                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="tank-top-casual-man">Casuais</button>
+                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                       </li>
                     </ul>
                   </li>
@@ -93,7 +98,7 @@
   </main>
 
   <footer>
-    <p>Versão: 3.0.0 - 0.1.112</p>
+    <p>Versão: 4.0.0 - 0.1.112</p>
   </footer>
 
   <script src="scripts.js"></script>
