Add dryfit products

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
   <!-- Main Content -->
   <main>
-    <h2 id="category-heading">Todos os Produtos</h2>
+    <h2 id="category-heading">Novidades</h2>
     <ul id="product-list"></ul>
   </main>
 
   <footer>
-    <p>Versão: 4.0.0 - 0.1.112</p>
+    <p>Versão: 4.0.0 - 0.2.131</p>
   </footer>
 
   <script src="scripts.js"></script>
