Caps: Add new products

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                   </li>
                 </ul>
               </li>
+              <li class="menu-item has-submenu">
+                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
+                <ul class="submenu">
+                  <li class="menu-item">
+                    <button data-category="caps-man">Bonés</button>
+                  </li>
+                </ul>
+              </li>
             </ul>
           </li>
         </ul>
@@ -98,7 +106,7 @@
   </main>
 
   <footer>
-    <p>Versão: 4.0.0 - 0.6.131</p>
+    <p>Versão: 4.0.0 - 0.6.136</p>
   </footer>
 
   <script src="scripts.js"></script>
