--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                 <ul class="submenu">
                   <li class="menu-item has-submenu">
+                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="sweatshirts-man">Blusas</button>
+                      </li>
+                    </ul>
                     <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                     <ul class="submenu">
                       <li class="menu-item">
@@ -82,6 +88,9 @@
                   <li class="menu-item">
                     <button data-category="slippers-man">Chinelos</button>
                   </li>
+                  <li class="menu-item">
+                    <button data-category="socks-man">Meias</button>
+                  </li>
                 </ul>
               </li>
               <li class="menu-item has-submenu">
@@ -106,7 +115,7 @@
   </main>
 
   <footer>
-    <p>Versão: 4.0.0 - 0.6.136</p>
+    <p>Versão: 4.1.0 - 0.6.146</p>
   </footer>
 
   <script src="scripts.js"></script>
