Add dress shirt

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <button data-category="tshirts-casual-man">Casuais</button>
                         <button data-category="tshirts-dryfit-man">Dry Fit</button>
                         <button data-category="tshirts-polo-man">Polo</button>
+                        <button data-category="dress-shirts-man">Sociais</button>
                       </li>
                     </ul>
                     <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
@@ -115,7 +116,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.0.0 - 0.7.149</p>
+    <p>Versão: 5.0.0 - 0.7.154</p>
   </footer>
 
   <script src="scripts.js"></script>
