Add: Products sweatshirts (#54)
* Add sweatshirts

* Fix product ID

* Update snapshot

* Add woman sweatshirts

* Fix product size

--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
               </li>
             </ul>
           </li>
+          <li class="menu-item has-submenu">
+            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
+            <ul class="submenu">
+              <li class="menu-item has-submenu">
+                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
+                <ul class="submenu">
+                  <li class="menu-item has-submenu">
+                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="sweatshirts-woman">Blusas</button>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
         </ul>
       </li>
     </ul>
@@ -116,7 +134,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.0.1 - 0.8.154</p>
+    <p>Versão: 5.1.0 - 0.23.163</p>
   </footer>
 
   <script src="scripts.js"></script>
