Add new products

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="menu-item has-submenu">
+                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="sweatpants-man">Moletom</button>
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li class="menu-item has-submenu">
