--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="menu-item has-submenu">
+                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="sweatpants-man">Moletom</button>
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li class="menu-item has-submenu">
@@ -134,7 +142,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.1.0 - 0.23.163</p>
+    <p>Versão: 5.2.0 - 0.26.165</p>
   </footer>
 
   <script src="scripts.js"></script>
