--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
                     <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                     <ul class="submenu">
                       <li class="menu-item">
-                        <button data-category="sweatpants-man">Moletom</button>
+                        <button data-category="pants-sweatpants-man">Moletom</button>
+                      </li>
+                      <li class="menu-item">
+                        <button data-category="pants-jeans-man">Jeans</button>
                       </li>
                     </ul>
                   </li>
