Add products and refactor tests (#56)
* Add products

* Add tests and refactor as well

* Update snapshot

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
                     <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                     <ul class="submenu">
                       <li class="menu-item">
-                        <button data-category="sweatpants-man">Moletom</button>
+                        <button data-category="pants-sweatpants-man">Moletom</button>
+                      </li>
+                      <li class="menu-item">
+                        <button data-category="pants-jeans-man">Jeans</button>
                       </li>
                     </ul>
                   </li>
@@ -142,7 +145,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.2.0 - 0.26.165</p>
+    <p>Versão: 5.3.0 - 0.26.167</p>
   </footer>
 
   <script src="scripts.js"></script>
