--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
               </li>
             </ul>
           </li>
+          <li class="menu-item has-submenu">
+            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
+            <ul class="submenu">
+              <li class="menu-item has-submenu">
+                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
+                <ul class="submenu">
+                  <li class="menu-item has-submenu">
+                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="sweatshirts-set-children">Moletom</button>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
         </ul>
       </li>
     </ul>
@@ -145,7 +163,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.3.0 - 0.31.167</p>
+    <p>Versão: 5.3.0 - 0.32.172</p>
   </footer>
 
   <script src="scripts.js"></script>
