--- a/index.html
+++ b/index.html
@@ -129,6 +129,25 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="menu-item has-submenu">
+                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="shorts-jeans-woman">Jeans</button>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="menu-item has-submenu">
+                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
+                    <ul class="submenu">
+                      <li class="menu-item">
+                        <button data-category="pants-jeans-woman">Jeans</button>
+                      </li>
+                      <li class="menu-item">
+                        <button data-category="pants-legging-woman">Legging</button>
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -163,7 +182,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.3.0 - 0.32.181</p>
+    <p>Versão: 5.4.0 - 0.33.186</p>
   </footer>
 
   <script src="scripts.js"></script>
