--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                 <ul class="submenu">
                   <li class="menu-item">
                     <button data-category="caps-man">Bonés</button>
+                    <!-- <button data-category="wallets-man">Carteiras</button> -->
+                    <button data-category="belts-man">Cintos</button>
                   </li>
                 </ul>
               </li>
@@ -182,7 +184,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.4.0 - 0.33.189</p>
+    <p>Versão: 5.5.0 - 0.33.198</p>
   </footer>
 
   <script src="scripts.js"></script>
