Add wallets products

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <ul class="submenu">
                   <li class="menu-item">
                     <button data-category="caps-man">Bonés</button>
-                    <!-- <button data-category="wallets-man">Carteiras</button> -->
+                    <button data-category="wallets-man">Carteiras</button>
                     <button data-category="belts-man">Cintos</button>
                   </li>
                 </ul>
@@ -184,7 +184,7 @@
   </main>
 
   <footer>
-    <p>Versão: 5.5.0 - 0.33.198</p>
+    <p>Versão: 5.6.0 - 0.33.205</p>
   </footer>
 
   <script src="scripts.js"></script>
